@@ -1,3 +1,8 @@
+2009-07-13  Doug Evans  <dje@sebabeach.org>
+
+	* decode.scm: Comment and formatting tweaks.
+	(-build-decode-table-guts): Add more data to logging message.
+
 2009-07-12  Doug Evans  <dje@sebabeach.org>
 
 	Delete files that now live in ../cpu.
